app/assets/stylesheets/minisite.css.scss
/*
 * This is a manifest file that'll automatically include all the stylesheets available in this directory
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 *= require_self
 *= require_tree ../stylesheets/jcrop
 *= require_tree ../stylesheets/minisite
 *= require _widget
 *= require _common
 *= require devise
*/

html, body {
  height: 100%;
}

body {
  margin: 0;
}

/*Opera Fix*/
body:before {
  content: "";
  height: 100%;
  float: left;
  width: 0;
  margin-top: -32767px;
}

#content_wrapper {
  overflow: auto;
  padding-bottom: 51px; /* must be same height as the footer */
}

p {
  margin: 0 0 0 0;
  padding: 13px 0 13px 0;
}

.showroom-nav {
  width: 95%;
  border: 1px solid white;
}

.showroom-nav td {
  width: 33%;
  border: 1px solid white;
}

.w580 {
  margin-left: auto;
  margin-right: auto;
}

body, button, input, select, textarea {
  font: 13px/17px Arial, sans-serif;
}

textarea {
  height: 100px;
}

/* css for timepicker */
.ui-timepicker-div .ui-widget-header {
  margin-bottom: 8px;
}

.ui-timepicker-div dl {
  text-align: left;
}

.ui-timepicker-div dl dt {
  height: 25px;
  margin-bottom: -25px;
}

.ui-timepicker-div dl dd {
  margin: 0 10px 10px 65px;
}

.ui-timepicker-div td {
  font-size: 90%;
}

.ui-tpicker-grid-label {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
}

select,
textarea,
input[type="text"] {
  font-family: Verdana, Arial, sans-serif;
  font-size: 0.95em;
}

input[type="submit"] {
  font-size: 1.0em;
}

input {
  border: 1px solid #cccccc;
  border-radius: 5px 5px 5px 5px;
  box-shadow: 0 2px 3px 0 #ebebeb inset;
  font-size: 1.0em;
  padding: 6px 10px;
}

.likabutton,
.button-link {
  padding: 10px 15px;
  background: #4479BA;
  color: #FFF;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  border: solid 1px #20538D;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
  -webkit-transition-duration: 0.2s;
  -moz-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.likabutton:hover,
.button-link:hover {
  background: #356094;
  border: solid 1px #2A4E77;
  text-decoration: none;
}

.likeabutton:active
.button-link:active {
  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
  -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
  background: #2E5481;
  border: solid 1px #203E5F;
}

div.shopping-item-index {
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
  padding: 10px;
}

td.shopping-item-index, th.shopping-item-index {
  padding: 5px 10px 5px 10px;
}

th.shopping-item-index {
  border-bottom: 1px dotted;
}

#shopping_item {
  padding: 0 10px 0 10px;
}

p.shopping-item {
  padding: 0 10px 0 10px;
}

#stripe_error {
  display: none;
}

.spinner {
  position: relative;
  left: 23px;
  top: 7px;
}

.portraits {
  width: 800px;
  margin: auto;
  margin-top: 40px;
  overflow: hidden;
  width: 100%
}

.portraits div {
  margin: 15px;
  float: left;
  width: 100px;
  height: 100px;
}

.portrait-pick {
  display: inline;
}

.portrait-pick a {
  display: inline;
  padding: 10px;
}

.portrait-pick a div.image-thumb {
  display: inline;
  border-bottom: 1px dotted;
}

div.offer_show {
  width: auto;
  margin: 0px auto;
}

div.offer_show p {
  text-align: center;
}

div.offer_show img {
  text-align: center
}

.price {
  font-size: 1.3em;
}

#nav_minisite_wrapper {

  font-variant: small-caps;
  font-weight: bold;
  height: 3em;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
}

.centered_container {
  margin: 0 auto;
  padding-top: 10px;
  text-align: center;
}

.centered_container li {
  display: inline;
  list-style: none;
  padding: 3px 8px 3px 8px;
}

.centered_container ul {
  padding: 0px;
}

#footer {
  position: relative;
  margin-top: -51px; /* negative value of footer height */
  border-top: 1px solid;
  height: 50px;
  clear: both;
  font-variant: small-caps;
  font-weight: bold;
  font-size: 106%;
  text-align: center;
}

#footer ul {
  padding: 0;
}

#footer li {
  display: inline;
  list-style: none;
  padding: 3px;
}

#logo {
  display: block;
  margin-left: auto;
  margin-right: auto
}

ul.story {
  list-style: inside disc none;
}

.story span.highlight {
  background-color: honeydew;
}

p.story_name_line {
  font-weight: bold;
}

.left {
  text-align: left;
}

.right {
  text-align: right;
}

td.total {
  border-top: 1px dotted;
  border-bottom: 1px dotted;
}

.shopping_heading {
  border: 1px solid;
  padding: 5px 0 5px 0;
  margin: 5px 0 5px 0;
}

.field {
  text-align: left;
}

#feedback {
  font-weight: bold;
}

.bp {
  height: 17px;
}

.field_with_errors label.message {
  margin-left: 5px;
}

#user_facebook_nav {
  vertical-align: top;
}

// Fix for bootstrap img css conflict.
.jcrop img {max-width: none}

.studio-address {
  text-align: left;
}

